@@ -2,6 +2,7 @@ node('docker') {
     docker.image('darinpope/ant:latest').inside {
         checkout scm
         sh '''
+            export ANT_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
             java -version
             ant -version
             mvn -version
